--- a/TP1/Tarea1.html
+++ b/TP1/Tarea1.html
@@ -6,7 +6,14 @@
         </head>
         <body>
             ¡Este es mi primer sitio web!
+            <select>
+            	<optgroup label="Género">
+            		<option value='1'> Mujeres</option>
+            		<option value='1'> Hombres</option>
+            	</optgroup>
+            </select>
+            textarea
+
         </body>
     </html>
 
-    
